# currency-exchange-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: CI.yml
core/: settings.py  urls.py
core/settings/: __init__.py  base.py  dev.py  prod.py
currency/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
currency/migrations/: 0001_initial.py  0002_initial.py
users/: serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
